<resources>

    <string name="app_name">Help Math</string>
    <string name="inputUserName">User name*</string>
    <string name="inputUserPassword">Password*</string>
    <string name="inputUserPasswordConfirm">Confirm password*</string>
    <string name="inputUserPasswordBackRest">Backup password*</string>
    <string name="inputUserPasswordBackRestConfirm">Confirm backup password*</string>
    <string name="inputUserPinBackUp">Pin code backup</string>
    <string name="txtTermsAndConditions">I accept the terms and conditions</string>
    <string name="btnSignIn">Finish register</string>
    <string name="wtfNoTermCond">You must agree to terms and conditions</string>
    <string name="wtfPasswordConfirmError">Passwords must match</string>
    <string name="btnLogIn">Log in</string>
    <string name="txtNotAccount">Don´t have account:</string>
    <string name="txtCreateAccount">Create account</string>
    <string name="wtfVoid">missing fields to fill </string>
    <string name="wtfMinCharUserName">The username must have a minimum of 3 characters</string>
    <string name="wtfMinCharUserPassword">The password must have a minimum of 8 characters</string>
    <string name="wtfMinCharGeneral">The username must have a minimum of 3 characters and the password must have a minimum of 8 characters</string>

</resources>