<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.start_activities.RegisterActivity"
    android:layout_marginHorizontal="10dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="33dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/icon_user_name"
            app:layout_constraintBottom_toBottomOf="@+id/tfUserName"
            app:layout_constraintEnd_toStartOf="@+id/tfUserName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tfUserName"
            app:layout_constraintVertical_bias="0.466"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfUserName"
            style="@style/InputLoginSt"
            android:layout_width="277dp"
            android:layout_height="63dp"
            android:layout_marginEnd="4dp"
            android:hint="@string/inputUserName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="315dp"
        android:layout_height="59dp"
        android:layout_marginTop="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="33dp"
            android:src="@drawable/icon_password_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tfUserPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tfUserPassword"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfUserPassword"
            style="@style/InputLoginSt"
            android:layout_width="277dp"
            android:layout_height="63dp"
            android:hint="@string/inputUserPassword"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="315dp"
        android:layout_height="59dp"
        android:layout_marginTop="172dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="33dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/icon_password_user"
            app:layout_constraintBottom_toBottomOf="@+id/tfUserPasswordConfirm"
            app:layout_constraintEnd_toStartOf="@+id/tfUserPasswordConfirm"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tfUserPasswordConfirm"
            app:layout_constraintVertical_bias="0.433"
            tools:ignore="ContentDescription,RtlHardcoded"
            android:layout_marginRight="10dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfUserPasswordConfirm"
            style="@style/InputLoginSt"
            android:layout_width="277dp"
            android:layout_height="63dp"
            android:hint="@string/inputUserPasswordConfirm"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="244dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="33dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_pin_code"
            app:layout_constraintBottom_toBottomOf="@+id/tfUsePinCodeBackup"
            app:layout_constraintEnd_toStartOf="@+id/tfUsePinCodeBackup"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tfUsePinCodeBackup"
            app:layout_constraintVertical_bias="0.466"
            tools:ignore="ContentDescription,RtlHardcoded" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfUsePinCodeBackup"
            style="@style/InputLoginSt"
            android:layout_width="277dp"
            android:layout_height="63dp"
            android:hint="@string/inputUserPinBackUp"
            android:inputType="numberPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="341dp"

        android:layout_height="60dp"
        android:layout_marginTop="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/cbTermCond"
            android:layout_width="33dp"
            android:layout_height="58dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/GenericText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTermsAndConditions"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cbTermCond"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.515" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        style="@style/ButtonLogReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:text="@string/btnSignIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>