<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.start_activities.LoginActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/avatarSelect"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        style="@style/AvatarSelect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/ibEditAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cPrimaryLight"
                android:src="@drawable/edit_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="33dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/icon_user_name"
        app:layout_constraintBottom_toBottomOf="@+id/tfUserName"
        app:layout_constraintEnd_toStartOf="@+id/tfUserName"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarSelect"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tfUserName"
        style="@style/InputLoginSt"
        android:layout_width="276dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:hint="@string/inputUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarSelect" />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="33dp"
        android:src="@drawable/icon_password_user"
        app:layout_constraintBottom_toBottomOf="@+id/tfUserPassword"
        app:layout_constraintEnd_toStartOf="@+id/tfUserPassword"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tfUserPassword"
        app:layout_constraintVertical_bias="0.466"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tfUserPassword"
        style="@style/InputLoginSt"
        android:layout_width="277dp"
        android:layout_height="63dp"
        android:layout_marginTop="12dp"
        android:hint="@string/inputUserPassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfUserName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/ButtonLogReg"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/btnLogIn"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfUserPassword" />

    <TextView
        android:id="@+id/tvNotAccount"
        style="@style/GenericText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txtNotAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogIn" />

    <ImageButton
        android:id="@+id/btnCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/edit_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toEndOf="@+id/tvNotAccount"
        app:layout_constraintTop_toBottomOf="@+id/btnLogIn"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>